WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
59396
Fix OwnPtr strict mode violation in ImageBufferCG
https://bugs.webkit.org/show_bug.cgi?id=59396
Summary
Fix OwnPtr strict mode violation in ImageBufferCG
James Robinson
Reported
2011-04-25 16:37:30 PDT
Fix OwnPtr strict mode violation in ImageBufferCG
Attachments
Patch
(1.40 KB, patch)
2011-04-25 16:38 PDT
,
James Robinson
sam
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
James Robinson
Comment 1
2011-04-25 16:38:05 PDT
Created
attachment 91014
[details]
Patch
James Robinson
Comment 2
2011-04-25 16:43:38 PDT
Committed
r84842
: <
http://trac.webkit.org/changeset/84842
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug