2011-04-25  James Robinson  <jamesr@chromium.org>

Reviewed by Sam Weinig.

        Fix OwnPtr strict mode violation in ImageBufferCG
        https://bugs.webkit.org/show_bug.cgi?id=59396

        * platform/graphics/cg/ImageBufferCG.cpp:
        (WebCore::ImageBuffer::ImageBuffer):

Canonical link: https://commits.webkit.org/74569@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@84842 268f45cc-cd09-0410-ab3c-d52691b4dbfc